# pyxapiand

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  __init__.py  collections.py  constants.py  pyproject.toml
src/pyxapiand/: __init__.py
src/xapiand/: __init__.py  collections.py  constants.py  utils.py
tests/: test_client.py  test_collections.py  test_constants.py  test_utils.py
