[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxapiand"
version = "2.0.0"
description = "Python client library for the Xapiand search engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Dubalu LLC", email = "contact@dubalu.com" },
]
keywords = ["xapiand", "xapian", "search", "client"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "httpx",
]

[project.optional-dependencies]
msgpack = ["msgpack"]
test = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/Dubalu-Development-Team/pyxapiand"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
